--- a/src/com/mmaier96180/sceneswitcher/fxml/MainWindow.fxml
+++ b/src/com/mmaier96180/sceneswitcher/fxml/MainWindow.fxml
@@ -1,23 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="439.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="492.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TabPane prefHeight="400.0" prefWidth="439.0" side="LEFT" tabClosingPolicy="UNAVAILABLE">
+      <TabPane prefHeight="400.0" prefWidth="492.0" side="LEFT" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab text="Scenes">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="402.0" />
-            </content>
+               <content>
+                  <VBox prefHeight="395.0" prefWidth="410.0">
+                     <children>
+                        <HBox>
+                           <children>
+                              <ListView editable="true" prefHeight="200.0" prefWidth="200.0">
+                                 <HBox.margin>
+                                    <Insets bottom="40.0" left="40.0" right="30.0" top="40.0" />
+                                 </HBox.margin>
+                              </ListView>
+                              <VBox alignment="CENTER" prefHeight="200.0" prefWidth="86.0" HBox.hgrow="ALWAYS">
+                                 <children>
+                                    <Button alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Edit">
+                                       <VBox.margin>
+                                          <Insets bottom="2.0" left="10.0" right="10.0" top="2.0" />
+                                       </VBox.margin>
+                                    </Button>
+                                    <Button alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="New Scene" VBox.vgrow="ALWAYS">
+                                       <VBox.margin>
+                                          <Insets bottom="2.0" left="10.0" right="10.0" top="2.0" />
+                                       </VBox.margin>
+                                    </Button>
+                                    <Button alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Duplicate Scene" VBox.vgrow="ALWAYS">
+                                       <VBox.margin>
+                                          <Insets bottom="2.0" left="10.0" right="10.0" top="2.0" />
+                                       </VBox.margin>
+                                    </Button>
+                                    <Button alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Delete Scene" VBox.vgrow="ALWAYS">
+                                       <VBox.margin>
+                                          <Insets bottom="2.0" left="10.0" right="10.0" top="2.0" />
+                                       </VBox.margin>
+                                    </Button>
+                                    <Button alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="On/Off" VBox.vgrow="ALWAYS">
+                                       <VBox.margin>
+                                          <Insets bottom="2.0" left="10.0" right="10.0" top="2.0" />
+                                       </VBox.margin>
+                                    </Button>
+                                 </children>
+                                 <HBox.margin>
+                                    <Insets right="30.0" />
+                                 </HBox.margin>
+                              </VBox>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+               </content>
           </Tab>
           <Tab text="Settings">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-            </content>
+               <content>
+                  <VBox prefHeight="200.0" prefWidth="100.0" />
+               </content>
           </Tab>
         </tabs>
       </TabPane>
