--- a/src/com/mmaier96180/sceneswitcher/fxml/MainWindow.fxml
+++ b/src/com/mmaier96180/sceneswitcher/fxml/MainWindow.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="492.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -65,7 +65,54 @@
           </Tab>
           <Tab text="Settings">
                <content>
-                  <VBox prefHeight="200.0" prefWidth="100.0" />
+                  <VBox alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <VBox alignment="CENTER">
+                           <children>
+                              <ListView prefHeight="200.0" prefWidth="200.0" />
+                              <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Change Language">
+                                 <VBox.margin>
+                                    <Insets top="20.0" />
+                                 </VBox.margin>
+                              </Button>
+                           </children>
+                           <VBox.margin>
+                              <Insets left="120.0" right="120.0" top="20.0" />
+                           </VBox.margin>
+                        </VBox>
+                        <VBox alignment="CENTER">
+                           <children>
+                              <Button mnemonicParsing="false" prefWidth="120.0" text="Updates">
+                                 <VBox.margin>
+                                    <Insets bottom="3.0" top="3.0" />
+                                 </VBox.margin>
+                              </Button>
+                              <Button mnemonicParsing="false" prefWidth="120.0" text="Source Code">
+                                 <VBox.margin>
+                                    <Insets bottom="3.0" top="3.0" />
+                                 </VBox.margin>
+                              </Button>
+                              <Button mnemonicParsing="false" prefWidth="120.0" text="Report Bug">
+                                 <VBox.margin>
+                                    <Insets bottom="3.0" top="3.0" />
+                                 </VBox.margin>
+                              </Button>
+                              <Button mnemonicParsing="false" prefWidth="120.0" text="Donation">
+                                 <VBox.margin>
+                                    <Insets bottom="3.0" top="3.0" />
+                                 </VBox.margin>
+                              </Button>
+                           </children>
+                           <VBox.margin>
+                              <Insets bottom="30.0" left="50.0" right="50.0" top="30.0" />
+                           </VBox.margin>
+                        </VBox>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Version 1.0" textAlignment="RIGHT" VBox.vgrow="ALWAYS">
+                           <VBox.margin>
+                              <Insets bottom="3.0" left="10.0" right="10.0" top="10.0" />
+                           </VBox.margin>
+                        </Text>
+                     </children></VBox>
                </content>
           </Tab>
         </tabs>
